# circ_solver

./: .gitignore  Application.cpp  Application.h  CLI11.hpp  CMakeLists.txt  config.h.in  main.cpp
cmake/: cadical.cmake  common.cmake  lstm.cmake  minisat.cmake
core/: CircReductSolver.cpp  CircSolver.cpp  ClauseExpander.h  CluaseSet.cpp  CluaseSet.h  Completion.h  DnfCompletion.h  DnfLoopFormula.cpp  Eliminate.cpp  Eliminate.h  Graph.h  LoopFormula.h  LpSolver.cpp  ReductSolver.cpp  ResultWriter.h  Solver.h  Status.cpp  Status.h  TypeDefine.h
patches/: minisat.patch
utils/: DIMACSParser.cpp  DIMACSParser.h  Parser.cpp  Parser.h  SetUtils.h  SystemUtils.cpp  SystemUtils.h
wrapper/: CadicalSolver.cpp  CadicalSolver.h  LCMDCBDLSolverWrapper.cpp  LCMDCBDLSolverWrapper.h  MiniSATSolverWrapper.cpp  MiniSATSolverWrapper.h  MinimalSATSolver.cpp  MinimalSATSolver.h  SolverWrapper.cpp  SolverWrapper.h
